14-exercise/manifests/backend/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environment: frontend
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
  policyTypes:
    - Ingress
